--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mysql2": "^2.2.5",
+    "node-cron": "^3.0.3",
+    "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.4",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
