--- a/Client/package.json
+++ b/Client/package.json
@@ -26,7 +26,7 @@
     "ajv-keywords": "^3.5.2",
     "antd": "^5.19.1",
     "axios": "^1.7.2",
-    "chart.js": "3.9.1",
+    "chart.js": "^4.4.3",
     "chroma-js": "2.4.2",
     "moment-timezone": "^0.5.45",
     "prop-types": "15.8.1",
