--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "CI=false npm run build -- --force"
+command = "NODE_ENV=production CI=false npm run build -- --force"
 publish = "Client/build"
