--- a/Client/package.json
+++ b/Client/package.json
@@ -38,7 +38,7 @@
     "react-flatpickr": "3.10.13",
     "react-redux": "^9.1.2",
     "react-router-dom": "6.25.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "stylis": "4.3.2",
     "stylis-plugin-rtl": "2.1.1",
