--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@apideck/better-ajv-errors": "^0.3.6",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@emotion/cache": "11.13.0",
     "@emotion/react": "11.13.0",
     "@emotion/styled": "11.13.0",
