--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-command = "NODE_ENV=production CI=false npm run build -- --force --legacy-peer-deps"
+command = "NODE_ENV=development CI=false npm run build -- --force --legacy-peer-deps"
 publish = "Client/build"
