--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apideck/better-ajv-errors": "^0.3.6",
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "@craco/craco": "^7.1.0",
     "@emotion/cache": "11.13.0",
     "@emotion/react": "11.13.0",
     "@emotion/styled": "11.13.0",
@@ -30,7 +31,11 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "chroma-js": "2.4.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "moment-timezone": "^0.5.45",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "prop-types": "15.8.1",
     "react": ">=16.8.0",
     "react-chartjs-2": "^5.2.0",
@@ -47,9 +52,9 @@
     "web-vitals": "4.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
     "install:peer-deps": "npm install --legacy-peer-deps"
