--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "jwt-decode": "^4.0.0",
     "mysql2": "^2.2.5",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.4",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "sequelize": "^6.6.2"
