--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-command = "npm run build -- --force --legacy-peer-deps"
+command = "NODE_ENV=production npm run build -- --force --legacy-peer-deps"
 publish = "Client/build"
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+from = "/*"
+to = "/index.html"
+status = 200
