--- a/Client/package.json
+++ b/Client/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "chroma-js": "2.4.2",
+    "craco-alias": "^3.0.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "moment-timezone": "^0.5.45",
