--- a/Client/package.json
+++ b/Client/package.json
@@ -32,6 +32,7 @@
     "chart.js": "^4.4.3",
     "chroma-js": "2.4.2",
     "craco-alias": "^3.0.1",
+    "cross-env-shell": "^7.0.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "moment-timezone": "^0.5.45",
@@ -85,7 +86,6 @@
     "@babel/plugin-transform-numeric-separator": "^7.24.7",
     "@babel/plugin-transform-optional-chaining": "^7.24.8",
     "@babel/plugin-transform-private-methods": "^7.24.7",
-    "react-refresh": "^0.14.0",
     "babel-preset-react-app": "^10.0.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "9.1.0",
