--- a/Client/package.json
+++ b/Client/package.json
@@ -55,7 +55,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "NODE_ENV=test FAST_REFRESH=false craco build",
+    "build": "NODE_ENV=development FAST_REFRESH=false craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
