--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "CI=false npm run build"
+  command = "NODE_ENV=development CI=false npm run build"
   publish = "Client/build"
 
 
